# OpenGov-EarlyGerman

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  PROJECT_STATUS.md  PUBLICATION_COMPLETE.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
opengov_earlygerman/: __init__.py  cli.py  config.py
opengov_earlygerman/ai/: conversation.py
opengov_earlygerman/api/: main.py
opengov_earlygerman/core/: cases_teacher.py  models.py  verb_conjugator.py  word_order.py
opengov_earlygerman/utils/: logger.py
tests/: __init__.py  test_api.py  test_cases_teacher.py  test_cli.py  test_config.py  test_conversation.py  test_logger.py  test_models.py  test_verb_conjugator.py  test_word_order.py
